# acme

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt
cmake/: Add_hermes.cmake  Add_json.cmake  URL.conf.cmake
doc/theory/: conf.py  index.rst
doc/theory/source/: conf.py  index.rst  prop_rudder.rst  propeller.rst  rudder.rst  validations.rst
doc/theory/source/figures/: figtex2eps  figtex2eps-preamble.tex  rudder_frame.fig  xfig
doc/theory/src/: prop_rudder.rst  propeller.rst  rudder.rst  validations.rst
src/acme/: CMakeLists.txt  acme.h  version.h
src/acme/propeller/: CPP.cpp  CPP.h  FPP1Q.cpp  FPP1Q.h  FPP4Q.cpp  FPP4Q.h  PropellerBaseModel.cpp  PropellerBaseModel.h
src/acme/propeller_rudder/: BrixPropellerRudder.h  BrixPropellerRudder.hpp  CMakeLists.txt  MMGPropellerRudder.h  MMGPropellerRudder.hpp  PropellerRudder.h  PropellerRudder.hpp  PropellerRudderBase.cpp  PropellerRudderBase.h  PropellerRudderBase.hpp
src/acme/rudder/: BrixRudderModel.cpp  BrixRudderModel.h  CMakeLists.txt  FlapRudderModel.cpp  FlapRudderModel.h  FujiiRudderModel.cpp  FujiiRudderModel.h  RudderBaseModel.h  RudderModelBase.cpp  RudderModelType.h  SimpleRudderModel.cpp  SimpleRudderModel.h  rudder.h
tests/: CMakeLists.txt
tests/dev_tests/: CMakeLists.txt  test_FPP1Q.cpp  test_propeller_rudder.cpp  test_rudders.cpp
tests/unit_tests/: CMakeLists.txt  test_acme_BrixRudder.cpp  test_acme_CPP.cpp  test_acme_FPP1Q.cpp  test_acme_FPP4Q.cpp  test_acme_FlapRudder.cpp  test_acme_simpleRudder.cpp
